--- a/ServiceImpl/Goods.Service/Web.config
+++ b/ServiceImpl/Goods.Service/Web.config
@@ -40,6 +40,7 @@
           <serviceMetadata httpGetEnabled="true" />
           <!-- 要接收故障异常详细信息以进行调试，请将以下值设置为 true。在部署前设置为 false 以避免泄漏异常信息 -->
           <serviceDebug includeExceptionDetailInFaults="false" />
+          <dataContractSerializer maxItemsInObjectGraph="2147483647" />
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
@@ -48,8 +49,15 @@
         </behavior>
       </endpointBehaviors>
     </behaviors>
-    
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
+    <bindings>
+      <webHttpBinding>
+        <!--其实要修改所有的服务，不管是服务端还是客户端，Binding那边增加一个没有设置名字的默认配置就OK了-->
+        <binding   closeTimeout="00:10:00" receiveTimeout="00:20:00" sendTimeout="00:20:00"
+                   maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+        </binding >
+      </webHttpBinding>
+    </bindings>
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
 
   <system.webServer>
