图片上传功能已完成，上传过程用Base64位字符串，服务器生成对应的Uri保存在后台。

--- a/Core/Goods.Core/Goods.Core.csproj
+++ b/Core/Goods.Core/Goods.Core.csproj
@@ -34,7 +34,9 @@
       <HintPath>..\..\..\..\TestWebSite\bin\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageUtil.cs" />
     <Compile Include="LogWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
