--- a/ServiceImpl/Goods.Service/Web.config
+++ b/ServiceImpl/Goods.Service/Web.config
@@ -13,6 +13,10 @@
   <connectionStrings>
     <add name="GoodsEntities" connectionString="data source=HIS-LISX\HRPSERVER;initial catalog=Goods;persist security info=True;user id=sa;pwd=123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+    <add key="ImagePath" value="D:\GoodsService\images\goods\"/>
+    <add key="ImageUri" value="http://192.168.10.61:8890/images/goods/"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
