上传图片、获取服务器版本信息

--- a/ServiceImpl/Goods.Service/Web.config
+++ b/ServiceImpl/Goods.Service/Web.config
@@ -15,7 +15,8 @@
   </connectionStrings>
   <appSettings>
     <add key="ImagePath" value="D:\GoodsService\images\goods\"/>
-    <add key="ImageUri" value="http://192.168.10.61:8890/images/goods/"/>
+    <add key="Localhost" value="http://192.168.10.61:8890"/>
+    <add key="AppVersionFilePath" value="D:\AppVersion.txt"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
