--- a/DataObject/Goods.DataObject/Goods.DataObject.csproj
+++ b/DataObject/Goods.DataObject/Goods.DataObject.csproj
@@ -49,10 +49,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArticleInfo.cs" />
     <Compile Include="ReturnResult.cs" />
     <Compile Include="UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VersionInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
