增加问题反馈

--- a/Model/Goods.Model/App.config
+++ b/Model/Goods.Model/App.config
@@ -3,6 +3,8 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -12,5 +14,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="GoodsEntities" connectionString="data source=HIS-LISX\HRPSERVER;initial catalog=Goods;persist security info=True;user id=sa;password=123;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="GoodsEntities1" connectionString="data source=139.224.129.220;initial catalog=Goods;persist security info=True;user id=sa;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="GoodsEntities2" connectionString="data source=139.224.129.220;initial catalog=Goods;persist security info=True;user id=sa;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
