--- a/Model/Goods.Model/Goods.Model.csproj
+++ b/Model/Goods.Model/Goods.Model.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Goods.cs" />
     <Compile Include="GoodsEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Questions.cs" />
     <Compile Include="Userloginrecord.cs" />
     <Compile Include="Users.cs" />
   </ItemGroup>
