--- a/DataObject/Goods.DataObject/Goods.DataObject.csproj
+++ b/DataObject/Goods.DataObject/Goods.DataObject.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdInfo.cs" />
     <Compile Include="ReturnResult.cs" />
     <Compile Include="UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
