增加淘宝接口

--- a/DataObject/Goods.DataObject/Goods.DataObject.csproj
+++ b/DataObject/Goods.DataObject/Goods.DataObject.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdInfo.cs" />
+    <Compile Include="CouponInfo.cs" />
     <Compile Include="ReturnResult.cs" />
     <Compile Include="UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
