--- a/ServiceImpl/Goods.Service/Web.config
+++ b/ServiceImpl/Goods.Service/Web.config
@@ -1,25 +1,34 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="GoodsEntities" connectionString="data source=HIS-LISX\HRPSERVER;initial catalog=Goods;persist security info=True;user id=sa;pwd=123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="GoodsEntities" connectionString="data source=HIS-LISX\HRPSERVER;initial catalog=Goods;persist security info=True;user id=sa;pwd=123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="ImagePath" value="D:\GoodsService\images\goods\"/>
     <add key="Localhost" value="http://192.168.10.61:8890"/>
     <add key="AppVersionFilePath" value="D:\AppVersion.txt"/>
   </appSettings>
+  <!--
+    有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
+
+    可在 <httpRuntime> 标记上设置以下特性。
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.5"/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <system.serviceModel>
     <services>
@@ -42,10 +51,10 @@
       <serviceBehaviors>
         <behavior>
           <!-- 为避免泄漏元数据信息，请在部署前将以下值设置为 false -->
-          <serviceMetadata httpGetEnabled="true" />
+          <serviceMetadata httpGetEnabled="true"/>
           <!-- 要接收故障异常详细信息以进行调试，请将以下值设置为 true。在部署前设置为 false 以避免泄漏异常信息 -->
-          <serviceDebug includeExceptionDetailInFaults="false" />
-          <dataContractSerializer maxItemsInObjectGraph="2147483647" />
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
@@ -57,23 +66,19 @@
     <bindings>
       <webHttpBinding>
         <!--其实要修改所有的服务，不管是服务端还是客户端，Binding那边增加一个没有设置名字的默认配置就OK了-->
-        <binding   closeTimeout="00:10:00" receiveTimeout="00:20:00" sendTimeout="00:20:00"
-                   maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
-        </binding >
+        <binding closeTimeout="00:10:00" receiveTimeout="00:20:00" sendTimeout="00:20:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647"/>
       </webHttpBinding>
     </bindings>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
-
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
+    <modules runAllManagedModulesForAllRequests="true"/>
     <!--
         若要在调试过程中浏览 Web 应用程序根目录，请将下面的值设置为 True。
         在部署之前将该值设置为 False 可避免泄露 Web 应用程序文件夹信息。
       -->
-    <directoryBrowse enabled="true" />
+    <directoryBrowse enabled="true"/>
   </system.webServer>
-
   <log4net>
     <appender name="WebLogFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
       <!--日志文件路径,按文件大小方式输出时在这里指定文件名，并且前面的日志按天在文件名后自动添加当天日期形成文件-->
@@ -99,7 +104,6 @@
         <param name="ConversionPattern" value="================== %d [%t] %-5p %c [%x] &lt;%X{auth}&gt; ================== %n - %m%n"/>
       </layout>
     </appender>
-
     <logger name="WebLog.Logger">
       <level value="ERROR"/>
       <level value="INFO"/>
